--- a/l10n/po/ja_JP/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.0.0.CR3 released - Towards Final'\n"
@@ -34,21 +34,31 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 2.0.0.CR3リリース - Towards Final'\n"
+"date: 2021-06-04\n"
+"tags: release\n"
+"synopsis: 今回のCRでは、さらにいくつかの問題を修正しました。最終版は6月末にリリースされます。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:12
+#, fuzzy
 msgid "Thanks to your feedback, we fixed some more issues in Quarkus 2.0 and we thought a new CR was necessary."
-msgstr ""
+msgstr "ご意見をいただき、Quarkus 2.0ではさらにいくつかの問題を修正しましたので、新しいCRが必要だと考えました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:14
+#, fuzzy
 msgid "As usual, it also comes with documentation refinements."
-msgstr ""
+msgstr "いつものように、ドキュメントの改良も施されています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:16
+#, fuzzy
 msgid "We will build the Final artifacts on June 23rd so keep the feedback coming!"
-msgstr ""
+msgstr "6月23日に最終成果物を作成しますので、フィードバックをお待ちしています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:17
@@ -63,19 +73,21 @@ msgstr "最新のマイグレーションガイドはこちらです: https://gi
 
 #. type: Title ==
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:21
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Jandex Upgrade"
-msgstr ""
+msgstr "Jandexアップグレード"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:24
+#, fuzzy
 msgid "If you are using the Jandex Maven plugin or the Jandex Gradle plugin in your applications, you need to update them."
-msgstr ""
+msgstr "アプリケーションでJandex MavenプラグインやJandex Gradleプラグインを使用している場合は、それらをアップデートする必要があります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:26
+#, fuzzy
 msgid "Refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.0#jandex-upgrade[migration guide] for the details."
-msgstr ""
+msgstr "詳細は link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.0#jandex-upgrade[移行ガイド]をご参照ください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:27
@@ -96,8 +108,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:34
+#, fuzzy
 msgid "You can get the full changelogs of https://github.com/quarkusio/quarkus/releases/tag/2.0.0.CR3[2.0.0.CR3] on GitHub."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.0.0.CR3[2.0.0.CR3]の完全な変更履歴はGitHubに掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:35
