--- a/l10n/po/ja_JP/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-06-04 13:29+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-06-07 08:47+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.0.0.CR3 released - Towards Final'\n"
@@ -35,7 +35,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus 2.0.0.CR3リリース - Towards Final'\n"
+"title: 'Quarkus 2.0.0.CR3リリース - Finalに向けて'\n"
 "date: 2021-06-04\n"
 "tags: release\n"
 "synopsis: 今回のCRでは、さらにいくつかの問題を修正しました。最終版は6月末にリリースされます。\n"
@@ -44,21 +44,18 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:12
-#, fuzzy
 msgid "Thanks to your feedback, we fixed some more issues in Quarkus 2.0 and we thought a new CR was necessary."
-msgstr "ご意見をいただき、Quarkus 2.0ではさらにいくつかの問題を修正しましたので、新しいCRが必要だと考えました。"
+msgstr "フィードバックのお陰で、Quarkus 2.0ではさらにいくつかの問題を修正し、新しいCRが必要だと考えました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:14
-#, fuzzy
 msgid "As usual, it also comes with documentation refinements."
-msgstr "いつものように、ドキュメントの改良も施されています。"
+msgstr "いつものように、ドキュメントの改善も施されています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:16
-#, fuzzy
 msgid "We will build the Final artifacts on June 23rd so keep the feedback coming!"
-msgstr "6月23日に最終成果物を作成しますので、フィードバックをお待ちしています。"
+msgstr "6月23日に最終アーティファクトを作成しますので、フィードバックをお待ちしています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:17
@@ -73,19 +70,17 @@ msgstr "最新のマイグレーションガイドはこちらです: https://gi
 
 #. type: Title ==
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:21
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Jandex Upgrade"
 msgstr "Jandexアップグレード"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:24
-#, fuzzy
 msgid "If you are using the Jandex Maven plugin or the Jandex Gradle plugin in your applications, you need to update them."
 msgstr "アプリケーションでJandex MavenプラグインやJandex Gradleプラグインを使用している場合は、それらをアップデートする必要があります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:26
-#, fuzzy
 msgid "Refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.0#jandex-upgrade[migration guide] for the details."
 msgstr "詳細は link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.0#jandex-upgrade[移行ガイド]をご参照ください。"
 
@@ -108,7 +103,6 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc:34
-#, fuzzy
 msgid "You can get the full changelogs of https://github.com/quarkusio/quarkus/releases/tag/2.0.0.CR3[2.0.0.CR3] on GitHub."
 msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.0.0.CR3[2.0.0.CR3]の完全な変更履歴はGitHubに掲載されています。"
 
