--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-amqp-amqp-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-amqp-amqp-build-time-config.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amqp-amqp-build-time-config.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amqp-amqp-build-time-config.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amqp-amqp-build-time-config.adoc:16
@@ -55,7 +55,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amqp-amqp-build-time-config.adoc:17
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amqp-amqp-build-time-config.adoc:26
@@ -74,7 +74,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amqp-amqp-build-time-config.adoc:27
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amqp-amqp-build-time-config.adoc:35
@@ -93,7 +93,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amqp-amqp-build-time-config.adoc:45
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amqp-amqp-build-time-config.adoc:39
