--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-07-09 02:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -53,9 +53,7 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:17
-#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:26
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:35
-#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:44
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:53
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:62
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:71
@@ -65,6 +63,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:107
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:116
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:125
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:134
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -73,40 +72,72 @@ msgstr "string"
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:25
 #, no-wrap
 msgid ""
-"[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.client-intelligence]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.client-intelligence[quarkus.infinispan-client.client-intelligence]`\n"
+"[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.use-schema-registration]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.use-schema-registration[quarkus.infinispan-client.use-schema-registration]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Sets client intelligence used by authentication\n"
+"Enables or disables Protobuf generated schemas upload to the server. Set it to 'false' when you need to handle the lifecycle of the Protobuf Schemas on Server side yourself. Default is 'true'.\n"
 "--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:26
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:44
+#, no-wrap
+msgid "boolean"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:29
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:47
+#, no-wrap
+msgid "`true`"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:34
 #, no-wrap
 msgid ""
-"[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.use-auth]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.use-auth[quarkus.infinispan-client.use-auth]`\n"
+"[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.client-intelligence]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.client-intelligence[quarkus.infinispan-client.client-intelligence]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Enables or disables authentication\n"
+"Sets client intelligence used by authentication Available values: ++*++ `BASIC` - Means that the client doesn't handle server topology changes and therefore will only used the list of servers supplied at configuration time. ++*++ `TOPOLOGY_AWARE` - Use this provider if you don't want the client to present any certificates to the remote TLS host. ++*++ `HASH_DISTRIBUTION_AWARE` - Like `TOPOLOGY_AWARE` but with the additional advantage that each request involving keys will be routed to the server who is the primary owner which improves performance greatly. This is the default.\n"
 "--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:38
+#, no-wrap
+msgid "`HASH_DISTRIBUTION_AWARE`"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:43
 #, no-wrap
 msgid ""
-"[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-username]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-username[quarkus.infinispan-client.auth-username]`\n"
+"[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.use-auth]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.use-auth[quarkus.infinispan-client.use-auth]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Sets user name used by authentication\n"
+"Enables or disables authentication. Set it to false when connecting to a Infinispan Server without authentication. deployments. Default is 'true'.\n"
 "--"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:52
+#, no-wrap
+msgid ""
+"[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-username]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-username[quarkus.infinispan-client.auth-username]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Sets user name used by authentication.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:61
 #, no-wrap
 msgid ""
 "[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-password]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-password[quarkus.infinispan-client.auth-password]`\n"
@@ -118,7 +149,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:61
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:70
 #, no-wrap
 msgid ""
 "[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-realm]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-realm[quarkus.infinispan-client.auth-realm]`\n"
@@ -130,7 +161,14 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:70
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:74
+#, fuzzy, no-wrap
+#| msgid "Default"
+msgid "`default`"
+msgstr "デフォルト"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:79
 #, no-wrap
 msgid ""
 "[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-server-name]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-server-name[quarkus.infinispan-client.auth-server-name]`\n"
@@ -142,26 +180,20 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:79
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:83
 #, no-wrap
-msgid ""
-"[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-client-subject]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-client-subject[quarkus.infinispan-client.auth-client-subject]`\n"
-"\n"
-"[.description]\n"
-"--\n"
-"Sets client subject used by authentication\n"
-"--"
+msgid "`infinispan`"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:88
 #, no-wrap
 msgid ""
-"[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-callback-handler]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-callback-handler[quarkus.infinispan-client.auth-callback-handler]`\n"
+"[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-client-subject]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-client-subject[quarkus.infinispan-client.auth-client-subject]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Sets callback handler used by authentication\n"
+"Sets client subject, necessary for those SASL mechanisms which require it to access client credentials.\n"
 "--"
 msgstr ""
 
@@ -169,11 +201,11 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:97
 #, no-wrap
 msgid ""
-"[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.sasl-mechanism]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.sasl-mechanism[quarkus.infinispan-client.sasl-mechanism]`\n"
+"[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-callback-handler]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.auth-callback-handler[quarkus.infinispan-client.auth-callback-handler]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Sets SASL mechanism used by authentication\n"
+"Specifies a `CallbackHandler` to be used during the authentication handshake. The `Callback`s that need to be handled are specific to the chosen SASL mechanism.\n"
 "--"
 msgstr ""
 
@@ -181,23 +213,29 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:106
 #, no-wrap
 msgid ""
-"[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.trust-store]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.trust-store[quarkus.infinispan-client.trust-store]`\n"
+"[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.sasl-mechanism]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.sasl-mechanism[quarkus.infinispan-client.sasl-mechanism]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Sets the trust store path\n"
+"Sets SASL mechanism used by authentication. Available values: ++*++ `DIGEST-MD5` - Uses the MD5 hashing algorithm in addition to nonces to encrypt credentials. This is the default. ++*++ `EXTERNAL` - Uses client certificates to provide valid identities to Infinispan Server and enable encryption. ++*++ `PLAIN` - Sends credentials in plain text (unencrypted) over the wire in a way that is similar to HTTP BASIC authentication. You should use `PLAIN` authentication only in combination with TLS encryption.\n"
 "--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:110
+#, no-wrap
+msgid "`DIGEST-MD5`"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:115
 #, no-wrap
 msgid ""
-"[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.trust-store-password]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.trust-store-password[quarkus.infinispan-client.trust-store-password]`\n"
+"[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.trust-store]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.trust-store[quarkus.infinispan-client.trust-store]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Sets the trust store password\n"
+"Specifies the filename of a truststore to use to create the `SSLContext`. You also need to specify a trustStorePassword. Setting this property implicitly enables SSL/TLS.\n"
 "--"
 msgstr ""
 
@@ -205,10 +243,22 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:124
 #, no-wrap
 msgid ""
+"[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.trust-store-password]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.trust-store-password[quarkus.infinispan-client.trust-store-password]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Specifies the password needed to open the truststore You also need to specify a trustStore. Setting this property implicitly enables SSL/TLS.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:133
+#, no-wrap
+msgid ""
 "[[quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.trust-store-type]]`link:#quarkus-infinispan-client-infinispan-client-runtime-config_quarkus.infinispan-client.trust-store-type[quarkus.infinispan-client.trust-store-type]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"Sets the trust store type\n"
+"Specifies the type of the truststore, such as JKS or JCEKS. Defaults to JKS if trustStore is enabled.\n"
 "--"
 msgstr ""
