--- a/l10n/po/ja_JP/_versions/main/guides/hibernate-reactive-panache.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/hibernate-reactive-panache.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-02 02:20+0000\n"
+"POT-Creation-Date: 2021-07-09 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1062,7 +1062,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:575
-msgid "This constructor will be used by Hibernate, it must be the only constructor in your class and have all the class attributes as parameters."
+msgid "This constructor will be used by Hibernate, and it must have a matching constructor with all the class attributes as parameters."
 msgstr ""
 
 #. type: delimited block =
@@ -1782,7 +1782,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:989
-msgid "It attempts to identity archives with Panache entities (and consumers of Panache entities)  by the presence of the marker file `META-INF/panache-archive.marker`. Panache includes an annotation processor that will automatically create this file in archives that depend on Panache (even indirectly). If you have disabled annotation processors you may need to create this file manually in some cases."
+msgid "It attempts to identify archives with Panache entities (and consumers of Panache entities)  by the presence of the marker file `META-INF/panache-archive.marker`. Panache includes an annotation processor that will automatically create this file in archives that depend on Panache (even indirectly). If you have disabled annotation processors you may need to create this file manually in some cases."
 msgstr ""
 
 #. type: Plain text
