--- a/l10n/po/ja_JP/_versions/main/guides/reactive-sql-clients.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/reactive-sql-clients.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-23 02:20+0000\n"
+"POT-Creation-Date: 2021-07-09 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1225,7 +1225,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/reactive-sql-clients.adoc:646
-msgid "First make sure that link:vertx#native-transport[native transport support] is enabled."
+msgid "First make sure that link:vertx-reference.adoc#native-transport[native transport support] is enabled."
 msgstr ""
 
 #. type: Plain text
