--- a/l10n/po/ja_JP/_versions/main/guides/security.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-17 02:19+0000\n"
+"POT-Creation-Date: 2021-07-09 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -628,7 +628,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security.adoc:255
-msgid "Please see link:vertx#same-site-cookie[SameSite cookies] for information about adding a https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Set-Cookie/SameSite[SameSite] cookie property to any of the cookies set by a Quarkus endpoint."
+#, fuzzy
+#| msgid "Please see link:vertx#same-site-cookie[SameSite cookies] for information about adding a https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Set-Cookie/SameSite[SameSite] cookie property to any of the cookies set by a Quarkus endpoint."
+msgid "Please see link:http-reference.adoc#same-site-cookie[SameSite cookies] for information about adding a https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Set-Cookie/SameSite[SameSite] cookie property to any of the cookies set by a Quarkus endpoint."
 msgstr "Quarkusエンドポイントによって設定されたCookieに link:https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Set-Cookie/SameSite[SameSite] Cookieプロパティーを追加する方法については、 link:vertx#same-site-cookie[SameSite Cookie] を参照してください。"
 
 #. type: Title ==
