--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-08-05 02:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -56,16 +56,16 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:18
 #: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:27
 #: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:36
-#: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:46
 #: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:55
 #: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:64
+#: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:73
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:21
-#: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:49
+#: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:58
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
@@ -84,7 +84,7 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:30
-#: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:58
+#: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:67
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
@@ -103,13 +103,32 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:39
-#: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:66
+#: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:76
 #, no-wrap
 msgid "`depends on dialect`"
 msgstr ""
 
 #. type: Table
+#: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:44
+#, no-wrap
+msgid ""
+"[[quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log_quarkus.hibernate-orm.log.queries-slower-than-ms]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log_quarkus.hibernate-orm.log.queries-slower-than-ms[quarkus.hibernate-orm.log.queries-slower-than-ms]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"If set, Hibernate will log queries that took more than specified number of milliseconds to execute.\n"
+"--"
+msgstr ""
+
+#. type: Table
 #: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:45
+#: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:82
+#, no-wrap
+msgid "long"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:54
 #, no-wrap
 msgid ""
 "[[quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log_quarkus.hibernate-orm.-persistence-unit-name-.log.sql]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log_quarkus.hibernate-orm.-persistence-unit-name-.log.sql[quarkus.hibernate-orm.\"persistence-unit-name\".log.sql]`\n"
@@ -122,7 +141,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:54
+#: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:63
 #, no-wrap
 msgid ""
 "[[quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log_quarkus.hibernate-orm.-persistence-unit-name-.log.format-sql]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log_quarkus.hibernate-orm.-persistence-unit-name-.log.format-sql[quarkus.hibernate-orm.\"persistence-unit-name\".log.format-sql]`\n"
@@ -134,7 +153,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:63
+#: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:72
 #, no-wrap
 msgid ""
 "[[quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log_quarkus.hibernate-orm.-persistence-unit-name-.log.jdbc-warnings]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log_quarkus.hibernate-orm.-persistence-unit-name-.log.jdbc-warnings[quarkus.hibernate-orm.\"persistence-unit-name\".log.jdbc-warnings]`\n"
@@ -142,5 +161,17 @@ msgid ""
 "[.description]\n"
 "--\n"
 "Whether JDBC warnings should be collected and logged.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log.adoc:81
+#, no-wrap
+msgid ""
+"[[quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log_quarkus.hibernate-orm.-persistence-unit-name-.log.queries-slower-than-ms]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-log_quarkus.hibernate-orm.-persistence-unit-name-.log.queries-slower-than-ms[quarkus.hibernate-orm.\"persistence-unit-name\".log.queries-slower-than-ms]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"If set, Hibernate will log queries that took more than specified number of milliseconds to execute.\n"
 "--"
 msgstr ""
