--- a/l10n/po/ja_JP/_guides/grpc.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc.adoc.po
@@ -22,9 +22,9 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/grpc.adoc:6
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "gRPC"
-msgstr ""
+msgstr "gRPC"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:13
