--- a/l10n/po/ja_JP/_guides/command-mode-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/command-mode-reference.adoc.po
@@ -239,9 +239,9 @@ msgstr "実行中のアプリケーションをシャットダウンしたい場
 
 #. type: Title ===
 #: upstream/_guides/command-mode-reference.adoc:115
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Development Mode"
-msgstr ""
+msgstr "開発モード"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:118
@@ -252,13 +252,15 @@ msgstr "また、コマンドモードアプリケーションでは、開発モ
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:120
+#, fuzzy
 msgid "As command mode applications will often require arguments to be passed on the commandline, this is also possible in dev mode via the `quarkus.args` system property. For example `mvn quarkus:dev -Dquarkus.args='--help'` and the same can be achieved with Gradle: `./gradlew quarkusDev --quarkus-args='--help'`."
-msgstr ""
+msgstr "コマンドモードのアプリケーションでは、コマンドラインに引数を渡す必要がある場合が多いので、devモードでも `quarkus.args` システムプロパティを使って引数を渡すことができます。例えば、 `mvn quarkus:dev -Dquarkus.args='--help'` 、Gradleでも同じことができます。 `./gradlew quarkusDev --quarkus-args='--help'`."
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:122
+#, fuzzy
 msgid "You should see the following down the bottom of the screen after the application is stopped:"
-msgstr ""
+msgstr "アプリケーションが停止した後、画面の下に以下のように表示されます。"
 
 #. type: delimited block -
 #: upstream/_guides/command-mode-reference.adoc:125
@@ -273,8 +275,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:131
+#, fuzzy
 msgid "You can press the `Space bar` key and the application will be started again.  You can also use the `e` hotkey to edit the command line arguments and restart your application."
-msgstr ""
+msgstr "`Space bar` キーを押せば、アプリケーションが再び起動します。また、 `e` ホットキーを使って、コマンドライン引数を編集し、アプリケーションを再起動することもできます。"
 
 #~ msgid "Dev mode"
 #~ msgstr "開発モード"
