--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -1,4 +1,5 @@
 Filename, Fuzzy Messages, Total Messages, Fuzzy Words, Total Words, Achievement
+l10n/po/ja_JP/_posts/2021-08-26-quarkus-2-1-4-final-released.adoc.po, 0, 14, 0, 151 ,100%
 l10n/po/ja_JP/_posts/2021-08-11-quarkus-2-1-2-final-released.adoc.po, 0, 14, 0, 148 ,100%
 l10n/po/ja_JP/_posts/2021-08-04-quarkus-2-1-1-final-released.adoc.po, 0, 14, 0, 148 ,100%
 l10n/po/ja_JP/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc.po, 0, 26, 0, 431 ,100%
